--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>Lesson28OnlineStoreServlet</module>
         <module>Lesson28E-StoreCommandController</module>
         <module>Lesson28PoemServlet</module>
+        <module>Lesson29E-StoreController</module>
         <module>Lesson30ServletRegistrationForm</module>
         <module>Lesson30ServletRegisterForm</module>
         <module>Lesson31PatternFactoryAbstract</module>
@@ -81,6 +82,7 @@
         <checkstyle.version>10.7.0</checkstyle.version>
         <pmd.maven.plugin.version>3.14.0</pmd.maven.plugin.version>
         <pmd.version>6.53.0</pmd.version>
+        <spring-context.version>6.0.7</spring-context.version>
     </properties>
 
     <dependencies>
@@ -224,130 +226,136 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.7</version>
+        </dependency>
     </dependencies>
-    <!--    <build>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-    <!--                <version>${mavenCompalePlugin.version}</version>-->
-    <!--                <configuration>-->
-    <!--                    <source>${maven.compiler.source}</source>-->
-    <!--                    <target>${maven.compiler.target}</target>-->
-    <!--                    <annotationProcessorPaths>-->
-    <!--                        <path>-->
-    <!--                            <groupId>org.projectlombok</groupId>-->
-    <!--                            <artifactId>lombok</artifactId>-->
-    <!--                            <version>${lombok.version}</version>-->
-    <!--                        </path>-->
-    <!--                    </annotationProcessorPaths>-->
-    <!--                </configuration>-->
-    <!--            </plugin>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-war-plugin</artifactId>-->
-    <!--                <version>${maven-war-plugin.version}</version>-->
-    <!--            </plugin>-->
-    <!--            <plugin>-->
-    <!--                <groupId>com.github.spotbugs</groupId>-->
-    <!--                <artifactId>spotbugs-maven-plugin</artifactId>-->
-    <!--                <version>${spotbugs.maven.plugin.version}</version>-->
-    <!--                <configuration>-->
-    <!--                    <effort>Max</effort>-->
-    <!--                    <threshold>Medium</threshold>-->
-    <!--                    <onlyAnalyze>com.-</onlyAnalyze>-->
-    <!--                    <maxHeap>1024</maxHeap>-->
-    <!--                </configuration>-->
-    <!--                <executions>-->
-    <!--                    <execution>-->
-    <!--                        <phase>compile</phase>-->
-    <!--                        <goals>-->
-    <!--                            <goal>check</goal>-->
-    <!--                        </goals>-->
-    <!--                    </execution>-->
-    <!--                </executions>-->
-    <!--                <dependencies>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>com.github.spotbugs</groupId>-->
-    <!--                        <artifactId>spotbugs</artifactId>-->
-    <!--                        <version>${spotbugs.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                </dependencies>-->
-    <!--            </plugin>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-pmd-plugin</artifactId>-->
-    <!--                <version>${pmd.maven.plugin.version}</version>-->
-    <!--                <executions>-->
-    <!--                    <execution>-->
-    <!--                        <phase>compile</phase>-->
-    <!--                        <goals>-->
-    <!--                            <goal>check</goal>-->
-    <!--                        </goals>-->
-    <!--                    </execution>-->
-    <!--                </executions>-->
-    <!--                <configuration>-->
-    <!--                    <failOnViolation>false</failOnViolation>-->
-    <!--                    <printFailingErrors>true</printFailingErrors>-->
-    <!--                    <rulesets>-->
-    <!--                        <ruleset>../codequality/pmd-ruleset.xml</ruleset>-->
-    <!--                        <ruleset>../codequality/rules.xml</ruleset>-->
-    <!--                    </rulesets>-->
-    <!--                    <targetJdk>${maven.compiler.target}</targetJdk>-->
-    <!--                    <linkXRef>false</linkXRef>-->
-    <!--                    <excludeRoots>-->
-    <!--                        <excludeRoot>target/generated-sources</excludeRoot>-->
-    <!--                    </excludeRoots>-->
-    <!--                </configuration>-->
-    <!--                <dependencies>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>net.sourceforge.pmd</groupId>-->
-    <!--                        <artifactId>pmd-core</artifactId>-->
-    <!--                        <version>${pmd.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>net.sourceforge.pmd</groupId>-->
-    <!--                        <artifactId>pmd-java</artifactId>-->
-    <!--                        <version>${pmd.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>net.sourceforge.pmd</groupId>-->
-    <!--                        <artifactId>pmd-javascript</artifactId>-->
-    <!--                        <version>${pmd.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>net.sourceforge.pmd</groupId>-->
-    <!--                        <artifactId>pmd-jsp</artifactId>-->
-    <!--                        <version>${pmd.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                </dependencies>-->
-    <!--            </plugin>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
-    <!--                <version>${checkstyle.maven.plugin.version}</version>-->
-    <!--                <dependencies>-->
-    <!--                    <dependency>-->
-    <!--                        <groupId>com.puppycrawl.tools</groupId>-->
-    <!--                        <artifactId>checkstyle</artifactId>-->
-    <!--                        <version>${checkstyle.version}</version>-->
-    <!--                    </dependency>-->
-    <!--                </dependencies>-->
-    <!--                <executions>-->
-    <!--                    <execution>-->
-    <!--                        <id>validate-files</id>-->
-    <!--                        <phase>validate</phase>-->
-    <!--                        <goals>-->
-    <!--                            <goal>check</goal>-->
-    <!--                        </goals>-->
-    <!--                        <configuration>-->
-    <!--                            <configLocation>codequality/checkstyle.xml</configLocation>-->
-    <!--                            <consoleOutput>true</consoleOutput>-->
-    <!--                            <failsOnError>true</failsOnError>-->
-    <!--                        </configuration>-->
-    <!--                    </execution>-->
-    <!--                </executions>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${mavenCompalePlugin.version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs.maven.plugin.version}</version>
+                <configuration>
+                    <effort>Max</effort>
+                    <threshold>Medium</threshold>
+                    <onlyAnalyze>com.-</onlyAnalyze>
+                    <maxHeap>1024</maxHeap>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>${spotbugs.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${pmd.maven.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <failOnViolation>false</failOnViolation>
+                    <printFailingErrors>true</printFailingErrors>
+                    <rulesets>
+                        <ruleset>../codequality/pmd-ruleset.xml</ruleset>
+                        <ruleset>../codequality/rules.xml</ruleset>
+                    </rulesets>
+                    <targetJdk>${maven.compiler.target}</targetJdk>
+                    <linkXRef>false</linkXRef>
+                    <excludeRoots>
+                        <excludeRoot>target/generated-sources</excludeRoot>
+                    </excludeRoots>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-core</artifactId>
+                        <version>${pmd.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-java</artifactId>
+                        <version>${pmd.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-javascript</artifactId>
+                        <version>${pmd.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>net.sourceforge.pmd</groupId>
+                        <artifactId>pmd-jsp</artifactId>
+                        <version>${pmd.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle.maven.plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>validate-files</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <configLocation>codequality/checkstyle.xml</configLocation>
+                            <consoleOutput>true</consoleOutput>
+                            <failsOnError>true</failsOnError>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
