--- a/pom.xml
+++ b/pom.xml
@@ -296,18 +296,25 @@
             <version>3.1.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version>
+        </dependency>
+
     </dependencies>
-    <!--    <build>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-    <!--                <version>${mavenCompalePlugin.version}</version>-->
-    <!--                <configuration>-->
-    <!--                    <source>${maven.compiler.source}</source>-->
-    <!--                    <target>${maven.compiler.target}</target>-->
-    <!--                    <annotationProcessorPaths>-->
-    <!--                        <path>-->
+    <build>
+        <defaultGoal>clean package</defaultGoal>
+        <!--        <plugins>-->
+        <!--            <plugin>-->
+        <!--                <groupId>org.apache.maven.plugins</groupId>-->
+        <!--                <artifactId>maven-compiler-plugin</artifactId>-->
+        <!--                <version>${mavenCompalePlugin.version}</version>-->
+        <!--                <configuration>-->
+        <!--                    <source>${maven.compiler.source}</source>-->
+        <!--                    <target>${maven.compiler.target}</target>-->
+        <!--                    <annotationProcessorPaths>-->
+        <!--                        <path>-->
     <!--                            <groupId>org.projectlombok</groupId>-->
     <!--                            <artifactId>lombok</artifactId>-->
     <!--                            <version>${lombok.version}</version>-->
@@ -407,15 +414,15 @@
     <!--                        <phase>validate</phase>-->
     <!--                        <goals>-->
     <!--                            <goal>check</goal>-->
-    <!--                        </goals>-->
-    <!--                        <configuration>-->
-    <!--                            <configLocation>codequality/checkstyle.xml</configLocation>-->
-    <!--                            <consoleOutput>true</consoleOutput>-->
-    <!--                            <failsOnError>true</failsOnError>-->
-    <!--                        </configuration>-->
-    <!--                    </execution>-->
-    <!--                </executions>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </build>-->
+        <!--                        </goals>-->
+        <!--                        <configuration>-->
+        <!--                            <configLocation>codequality/checkstyle.xml</configLocation>-->
+        <!--                            <consoleOutput>true</consoleOutput>-->
+        <!--                            <failsOnError>true</failsOnError>-->
+        <!--                        </configuration>-->
+        <!--                    </execution>-->
+        <!--                </executions>-->
+        <!--            </plugin>-->
+        <!--        </plugins>-->
+    </build>
 </project>
